Fix sidebar box title display overlapping with box content

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3848,7 +3848,7 @@ body.i18n-es {
     }
   }
 
-  .sidebar-content{
+  .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
     .pane-articles-test-panel-pane-2,
     .pane-news-test-panel-pane-2,
     .pane-press-releases-test-panel-pane-2,
